<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    android:orientation="vertical"
    tools:context=".visualization.BluetoothActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mclaren"
        android:gravity="center"
        android:minHeight="100dp"
        android:text="@string/bluetooth_settings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_startScan"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPopupButton"
            android:text="@string/button_startScanning"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_stopScan"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPopupButton"
            android:text="@string/button_stopScanning"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_scanningDevices"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/button_startScan"
            android:fontFamily="@font/mclaren"
            android:gravity="center"
            android:text="@string/scanning_for_devices"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/text_found_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mclaren"
        android:text="@string/devices_found"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tutorial_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/mclaren"
        android:text="@string/bluetooth_tutorial"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/bluetooth_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

    </ListView>

</LinearLayout>